Fix excess spacing in "content" area of topics
For some reason, when a topic in a listing can't be voted on (either
your own topics or the viewer is logged-out), CSS grid was adding some
space for the "content" area where the excerpt is shown, even when there
is no excerpt.

This switches to using minmax() to allow that row's height to shrink
down to zero, which fixes the spacing.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -26,7 +26,7 @@
     auto
     minmax($min-touch-size, auto);
   @media (min-width: $size-md) {
-    grid-template-rows: none;
+    grid-template-rows: auto auto minmax(0, auto) auto;
   }
 
   position: relative;
